--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
 
   <script src="main.js"></script>
 
+  <div class="banniere">
+    Toutes les captures d'écrans viennent de mon propre gameplay (Nintendo Switch). Toutes les autres images viennent du <a href="https://www.mariowiki.com/">Mario Wiki</a>. Les droits des personnages, jeux et musiques abordés sur ce site appartiennent à Nintendo.
+  </div>
 </body>
 </html>
